// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createEnumTypeCode > protobuf-es > 'generates code for a simple enum with localName' 1`] = `
"import { EnumRef } from "@pothos/core";
import { MyEnum } from "@testapis/protobuf-es-v2/testapis/basic/enums/enums_pb";
import { builder } from "../../builder";

export const MyEnum$Ref: EnumRef<MyEnum, MyEnum> = builder.enumType("MyEnum", {
  values: {
    FOO: {
      value: 1,
      extensions: { protobufEnumValue: { name: "MY_ENUM_FOO" } },
    },
    BAR: {
      value: 2,
      extensions: { protobufEnumValue: { name: "MY_ENUM_BAR" } },
    },
    BAZ: {
      value: 3,
      extensions: { protobufEnumValue: { name: "MY_ENUM_BAZ" } },
    },
  } as const,
  extensions: {
    protobufEnum: {
      name: "MyEnum",
      fullName: "testapis.basic.enums.MyEnum",
      package: "testapis.basic.enums",
    },
  },
});
"
`;

exports[`createEnumTypeCode > protobuf-es > 'generates code for an enum without unspecified with localName' 1`] = `
"import { EnumRef } from "@pothos/core";
import { MyEnumWithoutUnspecified } from "@testapis/protobuf-es-v2/testapis/basic/enums/enums_pb";
import { builder } from "../../builder";

export const MyEnumWithoutUnspecified$Ref: EnumRef<
  MyEnumWithoutUnspecified,
  MyEnumWithoutUnspecified
> = builder.enumType("MyEnumWithoutUnspecified", {
  values: {
    FOO: {
      value: 0,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_FOO" },
      },
    },
    BAR: {
      value: 1,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_BAR" },
      },
    },
    BAZ: {
      value: 2,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_BAZ" },
      },
    },
  } as const,
  extensions: {
    protobufEnum: {
      name: "MyEnumWithoutUnspecified",
      fullName: "testapis.basic.enums.MyEnumWithoutUnspecified",
      package: "testapis.basic.enums",
    },
  },
});
"
`;

exports[`createEnumTypeCode > protobuf-es > 'generates code for enum with extensions and ignored values' 1`] = `
"import { EnumRef } from "@pothos/core";
import { PrefixedEnum } from "@testapis/protobuf-es-v2/testapis/options/message_and_field/message_and_field_pb";
import { builder } from "../../builder";

export const PrefixedEnum$Ref: EnumRef<PrefixedEnum, PrefixedEnum> = builder
  .enumType("PrefixedEnum", {
    values: {
      PREFIXED_FOO: {
        value: 1,
        extensions: { protobufEnumValue: { name: "PREFIXED_FOO" } },
      },
      PREFIXED_BAR: {
        value: 2,
        extensions: { protobufEnumValue: { name: "PREFIXED_BAR" } },
      },
    } as const,
    extensions: {
      protobufEnum: {
        name: "PrefixedEnum",
        fullName: "testapis.options.message_and_field.PrefixedEnum",
        package: "testapis.options.message_and_field",
      },
    },
  });
"
`;

exports[`createEnumTypeCode > protobuf-es > 'generates code for nested enum with localName' 1`] = `
"import { EnumRef } from "@pothos/core";
import { ParentMessage_NestedEnum } from "@testapis/protobuf-es-v2/testapis/basic/nested/nested_pb";
import { builder } from "../../builder";

export const ParentMessageNestedEnum$Ref: EnumRef<
  ParentMessage_NestedEnum,
  ParentMessage_NestedEnum
> = builder.enumType("ParentMessageNestedEnum", {
  values: {
    FOO: { value: 1, extensions: { protobufEnumValue: { name: "FOO" } } },
    BAR: { value: 2, extensions: { protobufEnumValue: { name: "BAR" } } },
  } as const,
  extensions: {
    protobufEnum: {
      name: "NestedEnum",
      fullName: "testapis.basic.nested.ParentMessage.NestedEnum",
      package: "testapis.basic.nested",
    },
  },
});
"
`;

exports[`createEnumTypeCode > protobuf-es-v1 > 'generates code for a simple enum' 1`] = `
"import { EnumRef } from "@pothos/core";
import { MyEnum } from "@testapis/protobuf-es/testapis/basic/enums/enums_pb";
import { builder } from "../../builder";

export const MyEnum$Ref: EnumRef<MyEnum, MyEnum> = builder.enumType("MyEnum", {
  values: {
    FOO: {
      value: 1,
      extensions: { protobufEnumValue: { name: "MY_ENUM_FOO" } },
    },
    BAR: {
      value: 2,
      extensions: { protobufEnumValue: { name: "MY_ENUM_BAR" } },
    },
    BAZ: {
      value: 3,
      extensions: { protobufEnumValue: { name: "MY_ENUM_BAZ" } },
    },
  } as const,
  extensions: {
    protobufEnum: {
      name: "MyEnum",
      fullName: "testapis.basic.enums.MyEnum",
      package: "testapis.basic.enums",
    },
  },
});
"
`;

exports[`createEnumTypeCode > protobuf-es-v1 > 'generates code for an enum without unspecified' 1`] = `
"import { EnumRef } from "@pothos/core";
import { MyEnumWithoutUnspecified } from "@testapis/protobuf-es/testapis/basic/enums/enums_pb";
import { builder } from "../../builder";

export const MyEnumWithoutUnspecified$Ref: EnumRef<
  MyEnumWithoutUnspecified,
  MyEnumWithoutUnspecified
> = builder.enumType("MyEnumWithoutUnspecified", {
  values: {
    FOO: {
      value: 0,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_FOO" },
      },
    },
    BAR: {
      value: 1,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_BAR" },
      },
    },
    BAZ: {
      value: 2,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_BAZ" },
      },
    },
  } as const,
  extensions: {
    protobufEnum: {
      name: "MyEnumWithoutUnspecified",
      fullName: "testapis.basic.enums.MyEnumWithoutUnspecified",
      package: "testapis.basic.enums",
    },
  },
});
"
`;

exports[`createEnumTypeCode > protobuf-es-v1 > 'generates code for nested enum' 1`] = `
"import { EnumRef } from "@pothos/core";
import { ParentMessage_NestedEnum } from "@testapis/protobuf-es/testapis/basic/nested/nested_pb";
import { builder } from "../../builder";

export const ParentMessageNestedEnum$Ref: EnumRef<
  ParentMessage_NestedEnum,
  ParentMessage_NestedEnum
> = builder.enumType("ParentMessageNestedEnum", {
  values: {
    FOO: { value: 1, extensions: { protobufEnumValue: { name: "FOO" } } },
    BAR: { value: 2, extensions: { protobufEnumValue: { name: "BAR" } } },
  } as const,
  extensions: {
    protobufEnum: {
      name: "NestedEnum",
      fullName: "testapis.basic.nested.ParentMessage.NestedEnum",
      package: "testapis.basic.nested",
    },
  },
});
"
`;

exports[`createEnumTypeCode > ts-proto > 'generates code for a simple enum' 1`] = `
"import { EnumRef } from "@pothos/core";
import { MyEnum } from "@testapis/ts-proto/testapis/basic/enums/enums";
import { builder } from "../../builder";

export const MyEnum$Ref: EnumRef<MyEnum, MyEnum> = builder.enumType("MyEnum", {
  values: {
    FOO: {
      value: 1,
      extensions: { protobufEnumValue: { name: "MY_ENUM_FOO" } },
    },
    BAR: {
      value: 2,
      extensions: { protobufEnumValue: { name: "MY_ENUM_BAR" } },
    },
    BAZ: {
      value: 3,
      extensions: { protobufEnumValue: { name: "MY_ENUM_BAZ" } },
    },
  } as const,
  extensions: {
    protobufEnum: {
      name: "MyEnum",
      fullName: "testapis.basic.enums.MyEnum",
      package: "testapis.basic.enums",
    },
  },
});
"
`;

exports[`createEnumTypeCode > ts-proto > 'generates code for an enum without unspecified' 1`] = `
"import { EnumRef } from "@pothos/core";
import { MyEnumWithoutUnspecified } from "@testapis/ts-proto/testapis/basic/enums/enums";
import { builder } from "../../builder";

export const MyEnumWithoutUnspecified$Ref: EnumRef<
  MyEnumWithoutUnspecified,
  MyEnumWithoutUnspecified
> = builder.enumType("MyEnumWithoutUnspecified", {
  values: {
    FOO: {
      value: 0,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_FOO" },
      },
    },
    BAR: {
      value: 1,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_BAR" },
      },
    },
    BAZ: {
      value: 2,
      extensions: {
        protobufEnumValue: { name: "MY_ENUM_WITHOUT_UNSPECIFIED_BAZ" },
      },
    },
  } as const,
  extensions: {
    protobufEnum: {
      name: "MyEnumWithoutUnspecified",
      fullName: "testapis.basic.enums.MyEnumWithoutUnspecified",
      package: "testapis.basic.enums",
    },
  },
});
"
`;

exports[`createEnumTypeCode > ts-proto > 'generates code for enum with deprecated values' 1`] = `
"import { EnumRef } from "@pothos/core";
import { NotDeprecatedEnum } from "@testapis/ts-proto/testapis/options/deprecation/deprecation";
import { builder } from "../../builder";

export const NotDeprecatedEnum$Ref: EnumRef<
  NotDeprecatedEnum,
  NotDeprecatedEnum
> = builder.enumType("NotDeprecatedEnum", {
  values: {
    NOT_DEPRECATED_FOO: {
      deprecationReason:
        "testapis/options/deprecation/deprecation.proto is mark as deprecated.",
      value: 1,
      extensions: { protobufEnumValue: { name: "NOT_DEPRECATED_FOO" } },
    },
    DEPRECATED_BAR: {
      deprecationReason:
        "testapis.options.deprecation.NotDeprecatedEnum.DEPRECATED_BAR is mark as deprecated in a *.proto file.",
      value: 2,
      extensions: {
        protobufEnumValue: {
          name: "DEPRECATED_BAR",
          options: { deprecated: true },
        },
      },
    },
  } as const,
  extensions: {
    protobufEnum: {
      name: "NotDeprecatedEnum",
      fullName: "testapis.options.deprecation.NotDeprecatedEnum",
      package: "testapis.options.deprecation",
    },
  },
});
"
`;

exports[`createEnumTypeCode > ts-proto > 'generates code for enum with extensions' 1`] = `
"import { EnumRef } from "@pothos/core";
import { PrefixedEnum } from "@testapis/ts-proto/testapis/options/message_and_field/message_and_field";
import { builder } from "../../builder";

export const PrefixedEnum$Ref: EnumRef<PrefixedEnum, PrefixedEnum> = builder
  .enumType("PrefixedEnum", {
    values: {
      PREFIXED_FOO: {
        value: 1,
        extensions: { protobufEnumValue: { name: "PREFIXED_FOO" } },
      },
      PREFIXED_BAR: {
        value: 2,
        extensions: { protobufEnumValue: { name: "PREFIXED_BAR" } },
      },
    } as const,
    extensions: {
      protobufEnum: {
        name: "PrefixedEnum",
        fullName: "testapis.options.message_and_field.PrefixedEnum",
        package: "testapis.options.message_and_field",
      },
    },
  });
"
`;

exports[`createEnumTypeCode > ts-proto > 'generates code for nested enum' 1`] = `
"import { EnumRef } from "@pothos/core";
import { ParentMessage_NestedEnum } from "@testapis/ts-proto/testapis/basic/nested/nested";
import { builder } from "../../builder";

export const ParentMessageNestedEnum$Ref: EnumRef<
  ParentMessage_NestedEnum,
  ParentMessage_NestedEnum
> = builder.enumType("ParentMessageNestedEnum", {
  values: {
    FOO: { value: 1, extensions: { protobufEnumValue: { name: "FOO" } } },
    BAR: { value: 2, extensions: { protobufEnumValue: { name: "BAR" } } },
  } as const,
  extensions: {
    protobufEnum: {
      name: "NestedEnum",
      fullName: "testapis.basic.nested.ParentMessage.NestedEnum",
      package: "testapis.basic.nested",
    },
  },
});
"
`;
